wind-coding-conventions/fixtures/invalid/sample-impl/src/main/java/com/acme/order/service/impl/package-info.java
@NullMarked
package com.acme.order.service.impl;
